# msc-dissertation

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
data/epics/: E-001.json  E-002.json
scripts/: test_similarity.py
src/dissertation/agents/: baseline_generator.py  critic_agent.py  generator_agent.py  refiner_agent.py
src/dissertation/core/: cache_store.py  cli.py  db.py  db_models.py  exporter.py  jira_csv_exporter.py  openai_client.py  orchestrator.py  semantic_cache.py
src/dissertation/models/: schemas.py
src/dissertation/tools/: ambiguity_detector.py  gherkin_validator.py  invest_scorer.py  trace_checker.py
src/dissertation/utils/: audit.py  iteration_scores.py
src/dissertation/web/: app.py
tests/: test_imports.py
