[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msc-dissertation"
version = "0.1.0"
description = "MSc dissertation project: Agentic Requirements Generator (epics to user stories and Gherkin)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Murthy Kanuri" }
]
keywords = ["requirements-engineering", "gherkin", "user-stories", "llm", "dissertation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]

dependencies = [
  "pydantic>=2.7",
  "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "black>=24.0",
  "pre-commit>=3.7",
]
web = [
  "streamlit>=1.30"
]
[project.urls]
Repository = "https://github.com/m-kanuri/msc-dissertation"
Issues = "https://github.com/m-kanuri/msc-dissertation/issues"


[project.scripts]
dissertation = "dissertation.core.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# If you want this classifier ("Typing :: Typed"), add an empty file:
# src/dissertation/py.typed
[tool.setuptools.package-data]
dissertation = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # black handles line length

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

